<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/signup_wallpaper"
    tools:context=".select_signup">

    <ImageView
        android:id="@+id/back_image_selection"
        android:layout_width="37dp"
        android:layout_height="43dp"
        android:background="#2D9CDB"
        android:clickable="true"
        android:contentDescription="Return to "
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tintMode="add" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="341dp"
        android:layout_height="103dp"
        android:text="@string/ilanguage"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_student"
        android:layout_width="140dp"
        android:layout_height="191dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="513dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:contentDescription="A student"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/student_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_teacher"
        android:layout_width="141dp"
        android:layout_height="189dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="513dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:contentDescription="@string/a_teacher"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/teacher_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teacher"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="321dp"
        android:layout_height="78dp"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_your_role_to_get_started"
        android:textColor="@color/white"
        android:textColorLink="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_student" />

</androidx.constraintlayout.widget.ConstraintLayout>
